--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tunis - Personal Portfolio React Template</title>
+    <title>Achille Deribreux</title>
+    <script src="../src/views/all-home-version/HomeDark.jsx"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
